--- a/CP380-B3-BlockBlazor/appsettings.json
+++ b/CP380-B3-BlockBlazor/appsettings.json
@@ -8,9 +8,9 @@
   },
   "AllowedHosts": "*",
   "PayloadService": {
-    "url": "http://localhost:38327"
+    "url": "http://localhost:46688/PendingPayloads"
   },
   "BlockService": {
-    "blockurl": "http://localhost:38328/blocks"
+    "blockurl": "http://localhost:46688/blocks"
   }
 }
